# a2app-harness

./: .gitignore  AGENTS.md  Cargo.toml  README.md  a2app-architecture.md  package-lock.json  package.json  test-ws.js
.pi/extensions/makepad/: background-agent.ts  doc-bridge.ts  harness.ts  index.ts  inference-loop.ts  package.json  schema.ts  standard-apps.ts  tools.ts  tsconfig.json  types.ts  validate-splash.ts
.pi/extensions/makepad/prompts/: makepad-environment.md
.pi/extensions/makepad/tests/: launch-via-extension.integration.ts
.pi/extensions/pi-share-hf/: README.md
docs/: cfp-crdt-evolution-plan.md
extension/: doc-bridge.ts  harness.ts  index.ts  inference-loop.ts  package.json  schema.ts  standard-apps.ts  tools.ts  validate-splash.ts
extension/prompts/: makepad-environment.md
harness/: Cargo.toml
harness/src/: doc.rs  main.rs  repo.rs  router.rs
harness/tests/: integration_smoke.rs
makepad-host/: Cargo.toml
makepad-host/src/: agent_splash.rs  app.rs  app_host.rs  doc_agent.rs  lib.rs  main.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs
