[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[dependencies]
samod = "=0.6.1"
automerge = "0.6.1"
autosurgeon = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
shared = { path = "../shared" }
