[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[dependencies]
samod = { version = "=0.6.1", features = ["tokio", "axum", "tungstenite"] }
samod-core = "=0.6.1"
automerge = "0.7.4"
autosurgeon = "0.10"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
shared = { path = "../shared" }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tempfile = "3"
tokio-tungstenite = "0.27"
