[package]
name = "harness"
version = "0.1.0"
edition = "2024"

[dependencies]
samod = { version = "=0.6.1", features = ["tokio", "axum", "tungstenite"] }
automerge = "0.7.4"
autosurgeon = "0.10"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
url = "2"
shared = { path = "../shared" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = "0.27"
