[package]
name = "makepad-host"
version = "0.1.0"
edition = "2024"

[dependencies]
autosurgeon = "0.10"
async-trait = "0.1"
automerge = "0.7.4"
futures = "0.3"
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "12dcfc1e7700d99c98801dfab06b0d29c337bf3a" }
reqwest = { version = "0.12", features = ["json"] }
samod = { version = "=0.6.1", features = ["tokio", "tungstenite"] }
samod-core = "=0.6.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
shared = { path = "../shared" }
