[package]
name = "makepad-host"
version = "0.1.0"
edition = "2024"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "12dcfc1e7700d99c98801dfab06b0d29c337bf3a" }
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
samod = { version = "=0.6.1", features = ["tokio", "tungstenite"] }
automerge = "0.7.4"
autosurgeon = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
url = "2"
futures = "0.3"
libc = "0.2"
