[package]
name = "makepad-host"
version = "0.1.0"
edition = "2024"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad", rev = "cb93fa982231ab42655e15fdb2d2eaeb60bc64d3" }
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
samod = { version = "=0.6.1", features = ["tokio", "tungstenite"] }
automerge = "0.7.4"
autosurgeon = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
url = "2"
futures = "0.3"
libc = "0.2"
